--- a/index.css
+++ b/index.css
@@ -67,7 +67,10 @@ body {
     transition: ease-in-out 0.5s
 }
 
-
+#card-btn {
+    margin-bottom: 30px;
+    margin-top: 5px;
+}
 
 
 /*///////////////////////////////////////////////RESPONSIVE/////////////////*/
